# hpc-dino-game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  dinoagent.py  dinoai.py  dinoenv  dinoenv.py  dinopolicy.py  envlib.cpp  envlib.h  inputlib.cpp  inputlib.h  key.c  main.cpp  matchlib.cpp  matchlib.h  pyhandler.cpp  pyhandler.h  run.sh  translator.py
CSVTemplateMatch/: CMakeCache.txt  CMakeLists.txt  CSVTemplateMatch  CSVTemplateMatch.cpp  CSVtoMat  Makefile  cmake_install.cmake
CV/CSVTemplateMatch/: CMakeCache.txt  CMakeLists.txt  CSVTemplateMatch  CSVTemplateMatch.cpp  Makefile  cmake_install.cmake  log.txt
CV/CSVTemplateMatch/inputCSV/: test_cacti1.csv  test_cacti2.csv  test_multi_dino.csv
CV/CSVTemplateMatch/lib_test/: CMakeCache.txt  CMakeLists.txt  Dinoai  Dinoai.cpp  Makefile  cmake_install.cmake
CV/CSVTemplateMatch/lib_test/Matchlib/: CMakeLists.txt  Makefile  Matchlib.cpp  cmake_install.cmake
CV/MultiDetect/: CMakeCache.txt  CMakeLists.txt  Makefile  MultiDetect  MultiDetect.cpp  cmake_install.cmake  csvimg.csv  result.csv  resultaftermatch.csv  test_small.csv
CV/Screenshots_Joel/: img_0.csv  img_1.csv  img_10.csv  img_100.csv  img_101.csv  img_102.csv  img_103.csv  img_104.csv  img_105.csv  img_106.csv  img_107.csv  img_108.csv  img_109.csv  img_11.csv  img_110.csv  img_111.csv  img_112.csv  img_113.csv  img_114.csv  img_115.csv  img_116.csv  img_117.csv  img_118.csv  img_119.csv  img_12.csv  img_120.csv  img_121.csv  img_122.csv  img_123.csv  img_124.csv  img_125.csv  img_13.csv  img_139.csv  img_14.csv  img_140.csv  img_141.csv  img_142.csv  img_143.csv  img_144.csv  img_145.csv  (+268 more)
CV/lib_test/: CMakeCache.txt  Dinoai  Dinoai.cpp  Makefile  cmake_install.cmake
CV/lib_test/Matchlib/: Makefile  Matchlib.cpp  Matchlib.hpp  cmake_install.cmake
Dinoai/: CMakeLists.txt  Dinoai.cpp
Dinoai/Envlib/: Envlib.cpp  Envlib.hpp
Dinoai/Inputlib/: CMakeLists.txt  Inputlib.cpp  Inputlib.hpp
Dinoai/Matchlib/: CMakeLists.txt  CSVTemplateMatch.cpp  Match.cpp  Matchlib.cpp  Matchlib.hpp
documentation/prelim/: ieee_pes.bib  paper_guidelines_hansen.aux  paper_guidelines_hansen.bbl  paper_guidelines_hansen.blg  paper_guidelines_hansen.tex
tools/: run.sh
xtests/: xSetup.c  xrun.c  xrun.sh
