cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( CSVTemplateMatch CSVTemplateMatch.cpp )
target_link_libraries( CSVTemplateMatch ${OpenCV_LIBS} )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(CSVTemplateMatch PUBLIC OpenMP::OpenMP_CXX)
endif()
