cmake_minimum_required(VERSION 3.1)
project( CSVTemplateMatchProj )
find_package( OpenCV REQUIRED )
#include_directories( ${OpenCV_INCLUDE_DIRS} )

message(STATUS "OpenCV library status:")
message(STATUS "    config: ${OpenCV_DIR}")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")

add_executable( CSVTemplateMatch CSVTemplateMatch.cpp )
target_link_libraries( CSVTemplateMatch PRIVATE ${OpenCV_LIBS} )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(CSVTemplateMatch PUBLIC OpenMP::OpenMP_CXX)
endif()
