cmake_minimum_required(VERSION 2.8)
project( MultiDetectProj )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( MultiDetect MultiDetect.cpp )
target_link_libraries( MultiDetect ${OpenCV_LIBS} )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(MultiDetect PUBLIC OpenMP::OpenMP_CXX)
endif()
